Configure and implement some tests

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -10,7 +10,7 @@
     "pretty": true,
     "resolveJsonModule": true,
     "rootDir": "src",
-    "types": ["jest"],
+    "types": ["jest", "@testing-library/jest-dom", "node"],
     "jsx": "react-jsx",
 
     /* Linting */
