--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "//": "https://www.sensedeep.com/blog/posts/2021/how-to-create-single-source-npm-module.html",
     "build": "rm -fr dist/* && tsc -p tsconfig.json && tsc -p tsconfig.cjs.json && ./addPackageType",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "test": "jest",
+    "test:ci": "jest --collectCoverageFrom '<rootDir>/src/**/*.{ts,tsx}'"
   },
   "peerDependencies": {
     "bitmovin-player": ">=8.0.0",
@@ -35,6 +37,8 @@
     "react": ">=17.0.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.2",
+    "@testing-library/react": "^14.3.0",
     "@types/jest": "^29.5.12",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
@@ -49,7 +53,9 @@
     "eslint-plugin-require-extensions": "^0.1.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.2.5",
+    "ts-jest": "^29.1.2",
     "typescript": "^5.4.4"
   },
   "keywords": [
