--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,6 @@
     "strict": true,
     "noFallthroughCasesInSwitch": true,
   },
-  "exclude": ["node_modules", "dist"],
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["src/**/*.test.tsx", "src/**/*.test.ts", "src/testUtils"],
 }
