--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
     "test": "jest",
-    "test:ci": "jest --collectCoverageFrom '<rootDir>/src/**/*.{ts,tsx}'"
+    "test:ci": "jest --collectCoverage --collectCoverageFrom '<rootDir>/src/**/*.{ts,tsx}'"
   },
   "peerDependencies": {
     "bitmovin-player": ">=8.0.0",
