--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,6 +18,5 @@
     "strict": true,
     "noFallthroughCasesInSwitch": true,
   },
-  "include": ["src"],
-  "exclude": ["src/**/*.test.tsx", "src/**/*.test.ts", "src/testUtils"],
+  "include": ["src"]
 }
