--- a/tsconfig.base.cjs.json
+++ b/tsconfig.base.cjs.json
@@ -4,6 +4,6 @@
     "moduleResolution": "node",
     "module": "commonjs",
     "outDir": "dist/cjs",
-    "target": "es2015",
+    "target": "es2015"
   }
 }
