--- a/tsconfig.base.esm.json
+++ b/tsconfig.base.esm.json
@@ -4,6 +4,6 @@
     "moduleResolution": "bundler",
     "module": "esnext",
     "outDir": "dist/esm",
-    "target": "esnext",
+    "target": "esnext"
   }
 }
