Ged rid of CI coverage

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
         uses: ./.github/actions/installDependencies
 
       - name: Jest
-        run: npm run test:ci
+        run: npm run test
 
   code-style:
     name: Code format check
