--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,6 +9,8 @@ on:
         type: string
         default: 'main'
         description: Ref to build
+      dry-run:
+          type: boolean
 
 jobs:
   release:
@@ -30,3 +32,4 @@ jobs:
         run: ./release/release.sh
         env:
           NPM_PUBLISH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
+          DRY_RUN: ${{ inputs.dry-run }}
