--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
         run: npm run build
 
       - name: Release to NPM
-        run: ./release/release.sh
+        run: npm run release
         env:
           VERSION: ${{ inputs.version }}
           NPM_PUBLISH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
