--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "test": "jest"
   },
   "peerDependencies": {
-    "bitmovin-player": ">=8.0.0",
-    "bitmovin-player-ui": ">=3.60.0",
-    "react": ">=17.0.0"
+    "bitmovin-player": "^8.0.0",
+    "bitmovin-player-ui": "^3.60.0",
+    "react": "^17.0.0 || ^18.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.2",
