--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,7 +14,11 @@ on:
         type: string
         description: Version to release
       dry-run:
-          type: boolean
+        type: boolean
+        description: Dry run
+      skip-changelog-update:
+        type: boolean
+        description: Skip changelog update
 
 jobs:
   release:
@@ -43,3 +47,4 @@ jobs:
           VERSION: ${{ inputs.version }}
           NPM_PUBLISH_TOKEN: ${{ secrets.NPM_PUBLISH_TOKEN }}
           DRY_RUN: ${{ inputs.dry-run }}
+          SKIP_CHANGELOG_UPDATE: ${{ inputs.skip-changelog-update }}
