--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "release": "./release/release.sh",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
-    "test": "jest"
+    "test": "jest",
+    "prepare": "husky install"
   },
   "peerDependencies": {
     "bitmovin-player": "^8.0.0",
@@ -51,6 +52,7 @@
     "eslint-plugin-react-refresh": "^0.4.6",
     "eslint-plugin-require-extensions": "^0.1.3",
     "eslint-plugin-simple-import-sort": "^12.0.0",
+    "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "prettier": "^3.2.5",
@@ -65,5 +67,8 @@
   "files": [
     "dist",
     "README.md"
-  ]
+  ],
+  "lint-staged": {
+    "*.(ts|tsx|js|jsx|md|json)": "eslint --fix"
+  }
 }
