--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "lint:fix": "npm run lint -- --fix",
     "test": "jest",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "peerDependencies": {
     "bitmovin-player": "^8.0.0",
@@ -55,6 +55,7 @@
     "husky": "^9.0.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "ts-jest": "^29.1.2",
     "typescript": "^5.4.4"
